# drainer

./: .gitignore  Cargo.toml  bun.lockb  package.json  render.yaml
abi/: ERC20.json
contracts/: Mint.sol
ignition/modules/: Mint.ts
src/: main.rs
test/: Mint.ts
